--- a/.skhdrc
+++ b/.skhdrc
@@ -1,5 +1,3 @@
-# open terminal	
-cmd - 0x2C : open -na iTerm ~ # cmd /
 # open browser
 cmd - i : open -na "Brave Browser" --args --new-window
 cmd + shift - i : open -na "Brave Browser" --args --incognito
@@ -12,16 +10,12 @@ cmd - 0x24 ; zen
 
 :: zenspace @ : yabai -m config status_bar_background_color 0xff0081C1
 :: zenspaceq @ : yabai -m config status_bar_background_color 0xffE2E4E6
-:: zenspacetab @ : yabai -m config status_bar_background_color 0xff0081C1
 
 zen, zenspace < 0x24 ; zenwindow
 zen, zenwindow < 0x31 ; zenspace
 cmd + shift - 0x24 ; zenwindow
 
 cmd + shift - 0x31 ; zenspaceq
-
-zenspace < t ; zenspacetab
-zenspacetab < q ; zenspace
 
 # set insertion point in focused container
 zen < alt - h : yabai -m window --insert west
@@ -144,13 +138,28 @@ zenspaceq < m : yabai -m space --focus 8 ; skhd --key "escape"
 zenspaceq < 0x2B : yabai -m space --focus 9 ; skhd --key "escape" # ,
 zenspaceq < 0x2F : yabai -m space --focus 10 ; skhd --key "escape" # .
 
-zenspacetab < h : yabai -m space --focus first ; skhd --key "q"
-zenspacetab < l : yabai -m space --focus last ; skhd --key "q"
-zenspacetab < j : yabai -m space --focus prev ; skhd --key "q"
-zenspacetab < k : yabai -m space --focus next ; skhd --key "q"
+# send window to desktop and follow focus
+zenspaceq < shift - 0x31 : yabai -m window --space recent; yabai -m space --focus recent ; skhd --key "escape"
+zenspaceq < shift - h : yabai -m window --space  1; yabai -m space --focus 1 ; skhd --key "escape"
+zenspaceq < shift - j : yabai -m window --space  2; yabai -m space --focus 2 ; skhd --key "escape"
+zenspaceq < shift - k : yabai -m window --space  3; yabai -m space --focus 3 ; skhd --key "escape"
+zenspaceq < shift - l : yabai -m window --space  4; yabai -m space --focus 4 ; skhd --key "escape"
+zenspaceq < shift - 0x29 : yabai -m window --space  5; yabai -m space --focus 5 ; skhd --key "escape" # shift - ;
+zenspaceq < shift - 0x27 : yabai -m window --space  6; yabai -m space --focus 6 ; skhd --key "escape" # shift - '
+zenspaceq < shift - n : yabai -m window --space  7; yabai -m space --focus 7 ; skhd --key "escape"
+zenspaceq < shift - m : yabai -m window --space  8; yabai -m space --focus 8 ; skhd --key "escape"
+zenspaceq < shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9 ; skhd --key "escape" # shift - ,
+zenspaceq < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10 ; skhd --key "escape" # shift - .
+
+# create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
+zenspaceq < u : yabai -m space --create && \
+  index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+  yabai -m window --space "${index}" && \
+  yabai -m space --focus "${index}" ; \
+  skhd --key "escape"
 
 # workaround: this command actually sets us to default (zen < -)
-zen, zenwindow, zenspace, zenspaceq, zenspacetab < 0x1B ; default
+zen, zenwindow, zenspace, zenspaceq < 0x1B ; default
 # workaround: this command sets the border color than calls the 'default' mode
-zen, zenwindow, zenspace, zenspaceq, zenspacetab < escape : yabai -m config status_bar_background_color 0xff202020; \
+zen, zenwindow, zenspace, zenspaceq < escape : yabai -m config status_bar_background_color 0xff202020; \
   skhd --key "0x1B"
