--- a/.yabairc
+++ b/.yabairc
@@ -40,5 +40,6 @@ yabai -m config left_padding                 8
 yabai -m config right_padding                8
 yabai -m config window_gap                   8
 
+yabai -m rule --add app="iterm2" manage=off
 yabai -m rule --add app="System Preferences" manage=off
 yabai -m rule --add app="Cisco AnyConnect Secure Mobility Client" manage=off
