--- a/.skhdrc
+++ b/.skhdrc
@@ -4,18 +4,18 @@ cmd + shift - i : open -na "Brave Browser" --args --incognito
 
 # zen mode (cmd - ;)
 :: zen @ : yabai -m config status_bar_background_color 0xffBE4F45
-cmd - 0x24 ; zen
+cmd - 0x29 ; zen
 
-:: zenwindow @ : yabai -m config status_bar_background_color 0xff926D0D
+:: zenwindow @ : yabai -m config status_bar_background_color 0xff24CCAA
 
 :: zenspace @ : yabai -m config status_bar_background_color 0xff0081C1
 :: zenspaceq @ : yabai -m config status_bar_background_color 0xffE2E4E6
 
-zen, zenspace < 0x24 ; zenwindow
-zen, zenwindow < 0x31 ; zenspace
-cmd + shift - 0x24 ; zenwindow
+zen, zenspace < 0x24 ; zenwindow # <enter>
+zen, zenwindow < 0x31 ; zenspace # <space>
+cmd + shift - 0x24 ; zenwindow # cmd + shift - <enter>
 
-cmd + shift - 0x31 ; zenspaceq
+cmd + shift - 0x31 ; zenspaceq # cmd + shift - <space>
 
 # set insertion point in focused container
 zen < alt - h : yabai -m window --insert west
@@ -36,7 +36,7 @@ zen < alt - x : yabai -m space --mirror x-axis
 zen < alt - a : yabai -m space --toggle padding; yabai -m space --toggle gap
 
 # toggle window parent zoom
-zen < g : yabai -m window --toggle zoom-parent
+zen < d : yabai -m window --toggle zoom-parent
 
 # toggle window fullscreen zoom
 zen < f : yabai -m window --toggle zoom-fullscreen
@@ -86,6 +86,10 @@ zenwindow < shift - s : yabai -m window --resize bottom:0:-20
 zenwindow < shift - w : yabai -m window --resize top:0:20
 zenwindow < shift - d : yabai -m window --resize right:-20:0
 
+# float / unfloat window and center on screen
+zenwindow < t : yabai -m window --toggle float;\
+          yabai -m window --grid 4:4:1:1:2:2
+
 # create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
 zenspace < u : yabai -m space --create && \
   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
@@ -93,7 +97,7 @@ zenspace < u : yabai -m space --create && \
   yabai -m space --focus "${index}"
 
 # create desktop and follow focus - uses jq for parsing json (brew install jq)
-zenspace < cmd - n : yabai -m space --create && \
+zenspace < i : yabai -m space --create && \
   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
   yabai -m space --focus "${index}"
 
@@ -101,7 +105,7 @@ zenspace < cmd - n : yabai -m space --create && \
 zenspace < q : yabai -m space --destroy
 
 # fast focus desktop
-zenspace < 0x31 : yabai -m space --focus recent
+zenspace < 0x31 : yabai -m space --focus recent # <space>
 zenspace < h : yabai -m space --focus 1
 zenspace < j : yabai -m space --focus 2
 zenspace < k : yabai -m space --focus 3
@@ -114,7 +118,7 @@ zenspace < 0x2B : yabai -m space --focus 9 # ,
 zenspace < 0x2F : yabai -m space --focus 10 # .
 
 # send window to desktop and follow focus
-zenspace < shift - 0x31 : yabai -m window --space recent; yabai -m space --focus recent
+zenspace < shift - 0x31 : yabai -m window --space recent; yabai -m space --focus recent # <space>
 zenspace < shift - h : yabai -m window --space  1; yabai -m space --focus 1
 zenspace < shift - j : yabai -m window --space  2; yabai -m space --focus 2
 zenspace < shift - k : yabai -m window --space  3; yabai -m space --focus 3
@@ -126,7 +130,10 @@ zenspace < shift - m : yabai -m window --space  8; yabai -m space --focus 8
 zenspace < shift - 0x2B : yabai -m window --space  9; yabai -m space --focus 9 # shift - ,
 zenspace < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10 # shift - .
 
+# destroy desktop
+zenspaceq < q : yabai -m space --destroy ; skhd --key "escape"
 # fast focus desktop
+zenspaceq < 0x31 : yabai -m space --focus recent ; skhd --key "escape" # <space>
 zenspaceq < h : yabai -m space --focus 1 ; skhd --key "escape"
 zenspaceq < j : yabai -m space --focus 2 ; skhd --key "escape"
 zenspaceq < k : yabai -m space --focus 3 ; skhd --key "escape"
@@ -139,7 +146,7 @@ zenspaceq < 0x2B : yabai -m space --focus 9 ; skhd --key "escape" # ,
 zenspaceq < 0x2F : yabai -m space --focus 10 ; skhd --key "escape" # .
 
 # send window to desktop and follow focus
-zenspaceq < shift - 0x31 : yabai -m window --space recent; yabai -m space --focus recent ; skhd --key "escape"
+zenspaceq < shift - 0x31 : yabai -m window --space recent; yabai -m space --focus recent ; skhd --key "escape" # shift - <space>
 zenspaceq < shift - h : yabai -m window --space  1; yabai -m space --focus 1 ; skhd --key "escape"
 zenspaceq < shift - j : yabai -m window --space  2; yabai -m space --focus 2 ; skhd --key "escape"
 zenspaceq < shift - k : yabai -m window --space  3; yabai -m space --focus 3 ; skhd --key "escape"
@@ -155,6 +162,12 @@ zenspaceq < shift - 0x2F : yabai -m window --space 10; yabai -m space --focus 10
 zenspaceq < u : yabai -m space --create && \
   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
   yabai -m window --space "${index}" && \
+  yabai -m space --focus "${index}" ; \
+  skhd --key "escape"
+
+# create desktop and follow focus - uses jq for parsing json (brew install jq)
+zenspaceq < i : yabai -m space --create && \
+  index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
   yabai -m space --focus "${index}" ; \
   skhd --key "escape"
 
