--- a/.yabairc
+++ b/.yabairc
@@ -7,9 +7,9 @@ yabai -m config status_bar_icon_font         "FontAwesome:Regular:12.0"
 yabai -m config status_bar_background_color  0xff202020
 yabai -m config status_bar_foreground_color  0xffa8a8a8
 yabai -m config status_bar_space_icon_strip  'H' 'J' 'K' 'L' ':' '"' 'N' 'M' '<' '>'
-# yabai -m config status_bar_power_icon_strip  🔋🔌
-# yabai -m config status_bar_space_icon        🥋
-# yabai -m config status_bar_clock_icon        🕑
+yabai -m config status_bar_power_icon_strip   
+yabai -m config status_bar_space_icon        
+yabai -m config status_bar_clock_icon        
 
 # global settings
 yabai -m config mouse_follows_focus          off
@@ -28,7 +28,7 @@ yabai -m config active_window_opacity        1.0
 yabai -m config normal_window_opacity        0.90
 yabai -m config split_ratio                  0.50
 yabai -m config auto_balance                 off
-yabai -m config mouse_modifier               cmd
+yabai -m config mouse_modifier               fn
 yabai -m config mouse_action1                move
 yabai -m config mouse_action2                resize
 
@@ -41,5 +41,7 @@ yabai -m config right_padding                8
 yabai -m config window_gap                   8
 
 yabai -m rule --add app="iterm2" manage=off
-yabai -m rule --add app="System Preferences" manage=off
-yabai -m rule --add app="Cisco AnyConnect Secure Mobility Client" manage=off
+yabai -m rule --add app="^Finder" manage=float
+yabai -m rule --add app="System Preferences" manage=float
+yabai -m rule --add app="Cisco AnyConnect Secure Mobility Client" manage=float
+yabai -m rule --add app="^Alfred Preferences" manage=float
